@@ -1,3 +1,7 @@
+2002-08-15  Jody Goldberg <jody@gnome.org>
+
+	* gnome-keybinding-properties.c : Add a pile of missing metacity
+	  bindings.
 
 2002-08-10  Jody Goldberg <jody@gnome.org>
 
